# loopy

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
scripts/: install.sh
src/: aggregator.rs  checkpoint.rs  cli.rs  config.rs  cr.rs  diff.rs  engine.rs  engine_runner.rs  error.rs  lib.rs  main.rs  models.rs  orchestrator.rs  pipeline.rs  track_inspector.rs  watcher.rs  web_v2.rs
tests/: mock_ralph.sh
tests/e2e/: run.sh
web/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/hooks/: useEngine.ts
web/src/pages/: PipelineView.tsx  ProjectListV2.tsx
web/src/styles/: globals.css
web/src/types/: v2.ts
